--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: java
 before_script:
   - cd CDSStarter
 script:
-  - ./gradlew init
-  - ./gradlew build 
+  - ./gradlew assemble
+  - ./gradlew check
